2009-03-08  Mario Blättermann  <mariobl@svn.gnome.org>

	* de/de.po: Updated German translation.

2009-03-08  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation

2009-03-08  Philip Withnall  <philip@tecnocode.co.uk>

	* en_GB/en_GB.po: Updated British English translation.

2009-03-08  Philip Withnall  <philip@tecnocode.co.uk>

	* C/totem.xml: Made a few more bits of terminology consistent and
	fixed the rest of the problems on Shaun's list.

2009-03-08  Philip Withnall  <philip@tecnocode.co.uk>

	* C/totem.xml: Fixed some problems found by Shaun McCance's editorial
	review of the documentation. (Closes: #574524)

2009-03-07  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation

2009-03-05  Claude Paroz  <claude@2xlibre.net>

	* fr/fr.po: Partial update by Bruno Brouard and Claude Paroz.

2009-03-04  Daniel Nylander <po@danielnylander.se>

	* sv/sv.po: Updated Swedish translation.

2009-03-03  Philip Withnall  <philip@tecnocode.co.uk>

	* en_GB/en_GB.po: Updated British English translation.

2009-03-03  Philip Withnall  <philip@tecnocode.co.uk>

	* C/totem.xml: Added documentation for the plugins and tidied up a
	few other things.

2009-03-03  Mario Blättermann  <mariobl@svn.gnome.org>

	* de/de.po: Updated German translation.

2009-03-02  Daniel Nylander <po@danielnylander.se>

	* sv/sv.po: Updated Swedish translation.

2009-03-01  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation

2009-03-01  Philip Withnall  <philip@tecnocode.co.uk>

	* C/totem.xml: Fixed a few typos.
	* en_GB/en_GB.po: Updated British English translation.

2009-03-01  Simos Xenitellis  <simos@gnome.org>

	* el/el.po: Updated Greek translation (Michael Kotsarinis)

2009-02-28  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation

2009-02-26  Mario Blättermann  <mariobl@svn.gnome.org>

	* de/de.po: Updated German translation.
