@@ -1,3 +1,8 @@
+2009-03-08  Philip Withnall  <philip@tecnocode.co.uk>
+
+	* C/totem.xml: A few more small fixes to the documentation to aid
+	readability and consistency.
+
 2009-03-08  Mario Blättermann  <mariobl@svn.gnome.org>
 
 	* de/de.po: Updated German translation.
